--- a/t1/p2/CSSLab/style.css
+++ b/t1/p2/CSSLab/style.css
@@ -40,16 +40,33 @@
 
 body {position: relative; margin: 0; padding: 0; }
 nav {
-
+    position: absolute; top: 52px; left: 0;
+    width: 160px; height: 700px;
+    font: bold 1em sans-serif;
+    text-align: center;
 }
 
 nav a {
-
+    display: block;
+    background-color: #ACE;
+    border-color: blue;
+    border-style: solid;
+    color: black;
+    text-decoration: none; 
+    margin-bottom: 0.25em;
+    padding: 5px 10px; 
 }
-nav a:hover {color: #fff;}
+nav a:hover {
+    color: #fff;
+    background-color: black;
+}
 
 section {
-
+    position: absolute;
+    top: 26px; left: 161px; right: 25px;
+    border: solid #FFCC99;
+    color: #f00;
+    padding: 5px 10px; 
 }
 section p {margin: 0 1em 1em;}
 section h3 {
@@ -62,7 +79,7 @@ section h3 {
    elements property wins.
 */
 section a:link {
-
+    color: grey;
 }
 section a:visited {
 
@@ -76,10 +93,16 @@ section a:visited:hover {
 
 /* Look up this selector, figure out which particular elements the style applies to */
 section>header>h1 {
-
+    font: bold 25px sans-serif;
+    text-align: right;
+    text-transform: lowercase;
+    letter-spacing: 0.5em;
+    background-color: #ACE;
+    color: #024;
+    margin: 0 0 2px 0; 
 }
 
 code, pre {
-
+    color: #0f0; font: 110% monospace;
 }
 
