--- a/a1/style.css
+++ b/a1/style.css
@@ -13,7 +13,7 @@ body {
   width: 100%; height: 100%;
 }
 
-nav#main {
+nav.main {
   border-radius: 25px;
   position: absolute;
   border: solid black 2px;
@@ -42,7 +42,14 @@ header.main {
           box-sizing: border-box;
 }
 
-section#content {
+header.menu {
+  margin: 20px 30px;
+  font-family: 'Poiret One', cursive;
+  font-size: 50px;
+  text-decoration: underline;
+}
+
+section.content {
   border-radius: 25px;
   background-color: lightblue;
   border: solid black 2px;
